apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: torrents
spec:
  selector:
    app: qbittorrent
  ports:
  - port: 8080
    targetPort: 8080
    name: webui
  - port: 6881
    targetPort: 6881
    name: torrent-tcp
  - port: 6881
    targetPort: 6881
    protocol: UDP
    name: torrent-udp
